# QUASAR

./: .env.example  .gitignore  APPROACH.md  ARCHITECTURE.md  BUILD_PLAN.md  DATASETS.md  EVALUATION.md  EXECUTION_GUARDRAILS.md  INTERNSHIP_STRATEGY.md  MODELS.md  PIQD_DESIGN.md  PROGRESS.md  QUANTUM_GROUNDBREAKING_PROJECT.md  README.md  RESEARCH_PAPER.md  STRATEGIC_PLAN_3_PROJECTS.md  pyproject.toml  requirements-lock.txt  requirements.txt  software-physics-brainstorm.md
configs/: training.yaml
guidelines/: 00_OVERVIEW.md  01_ENVIRONMENT.md  03_FINETUNING.md  05_EVALUATION.md  06_HARDWARE.md  07_DISCOVERY.md  08_PAPER.md
scripts/: test_ibm.py  test_qiskit.py
src/agent/: __init__.py  analyzer.py  discovery.py  memory.py  proposer.py
src/evaluation/: __init__.py  baselines.py  metrics.py
src/quantum/: barren_plateau.py  executor.py  hamiltonians.py  verifier.py
src/training/: __init__.py  compare_models.py  dataset.py  finetune.py  validate_model.py
tests/: test_analyzer.py  test_barren_plateau.py  test_baselines.py  test_dataset.py  test_discovery.py  test_executor.py  test_hamiltonians.py  test_memory.py  test_metrics.py  test_proposer.py  test_verifier.py
